--- a/.luaurc
+++ b/.luaurc
@@ -2,7 +2,6 @@
     "languageMode": "strict",
     "aliases": {
         "tests": "./tests",
-        "std": "./require/",
-        "util": "./require/luau/util/"
+        "legion": "./require/",
     }
 }
