giga project structure overhaul commit

--- a/.luaurc
+++ b/.luaurc
@@ -2,6 +2,6 @@
     "languageMode": "strict",
     "aliases": {
         "tests": "./tests",
-        "legion": "./require/",
+        "builtin": "./resources/luau_library"
     }
 }
