store builtin module cache as ref instead of global table

--- a/.luaurc
+++ b/.luaurc
@@ -2,6 +2,7 @@
     "languageMode": "strict",
     "aliases": {
         "tests": "./tests",
-        "builtin": "./resources/luau_library"
+        "builtin": "./resources/luau_library",
+        "example": "./example/"
     }
 }
